--- a/defi-dashboard/package.json
+++ b/defi-dashboard/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.5.1",
     "core-js": "^3.29.0",
     "pinia": "^2.0.0",
+    "register-service-worker": "^1.7.2",
     "roboto-fontface": "*",
     "vue": "^3.2.0",
     "vue-router": "^4.0.0",
@@ -27,10 +28,12 @@
     "eslint-plugin-vue": "^9.3.0",
     "sass": "^1.69.4",
     "sass-loader": "^13.3.2",
-    "typescript": "^5.0.0",
+    "typescript": "^5.2.2",
     "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^1.2.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
